cron-jobs-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: cron-jobs-controller
  labels:
    app: cron-jobs-controller
  annotations:
    fluxcd.io/tag.cron-jobs-controller: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: cron-jobs-controller
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: cron-jobs-controller
    spec:
      containers:
        - name: cron-jobs-controller
          image: onedpo/process-cron:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "0.25Gi"
              cpu: "0.25"
            limits:
              memory: "1Gi"
              cpu: "1"
      imagePullSecrets:
        - name: regcred
