batch-process.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: batch-process
  labels:
    app: batch-process
  annotations:
    fluxcd.io/tag.batch-process: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: batch-process
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: batch-process
    spec:
      containers:
        - name: batch-process
          image: onedpo/batch-process:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          volumeMounts:
          - name: configs
            mountPath: "/usr/src/app/conf"
            readOnly: true
          resources:
            requests:
              memory: "6Gi"
              cpu: "2"
            limits:
              memory: "10Gi"
              cpu: "4"
      volumes:
        - name: configs
          secret:
            secretName: configs
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: batch-process-service
  labels:
    app: batch-process
spec:
  selector:
    app: batch-process
  ports:
    - protocol: TCP
      name: http
      port: 8002
      targetPort: 8002
