extraction-controller.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: extraction-controller
  labels:
    app: extraction-controller
  annotations:
    fluxcd.io/tag.extraction-controller: semver:~1.0
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: extraction-controller
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: extraction-controller
    spec:
      containers:
        - name: extraction-controller
          image: onedpo/extraction-controller:prod
          imagePullPolicy: Always
          ports:
            - containerPort: 7001
          volumeMounts:
          - name: configs
            mountPath: "/usr/src/app/conf"
            readOnly: true
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
            limits:
              memory: "2Gi"
              cpu: "2"
      volumes:
        - name: configs
          secret:
            secretName: configs
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: extraction-controller-service
  labels:
    app: extraction-controller
spec:
  selector:
    app: extraction-controller
  ports:
    - protocol: TCP
      name: http
      port: 7001
      targetPort: 7001
